log/download_ffhq.log
nohup: ignoring input
  File "<stdin>", line 5
    print(f'Rows: 
          ^
SyntaxError: unterminated string literal (detected at line 5)
